RESOLVED FIXED257930
[IFC] LineBuilder should not mutate layout state
https://bugs.webkit.org/show_bug.cgi?id=257930
Summary [IFC] LineBuilder should not mutate layout state
alan
Reported 2023-06-09 18:53:57 PDT
ssia
Attachments
Patch (7.40 KB, patch)
2023-06-09 19:25 PDT, alan
no flags
[fast-cq]Patch (7.40 KB, patch)
2023-06-12 07:05 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2023-06-09 19:25:04 PDT
alan
Comment 2 2023-06-12 07:05:32 PDT
Created attachment 466665 [details] [fast-cq]Patch
EWS
Comment 3 2023-06-12 09:01:15 PDT
Committed 265071@main (fcf31d445023): <https://commits.webkit.org/265071@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466665 [details].
Radar WebKit Bug Importer
Comment 4 2023-06-12 09:02:19 PDT
Note You need to log in before you can comment on or make changes to this bug.